Final update of file
This is the completed and final push of this file, including the cache, parquet, uncache and verification of uncache

--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -8,19 +8,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "d5aca673-72d9-46cb-940c-1ecfaa9a2f79"
+        "outputId": "72775107-1f95-4822-a03e-a4488f0abdff"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.39)] [Connected to cloud.r-\r                                                                                                    \rHit:2 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.39)] [Waiting for headers] \r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "\r0% [Waiting for headers] [Waiting for headers] [Connected to ppa.launchpadcontent.net (185.125.190.8\r                                                                                                    \rHit:4 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "\r0% [Waiting for headers] [Connected to ppa.launchpadcontent.net (185.125.190.80)] [Waiting for heade\r                                                                                                    \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:6 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "Hit:1 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Hit:3 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Hit:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
             "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
             "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
             "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -74,13 +74,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09984659-ac32-448a-f7c5-e3f96341d29e"
+        "outputId": "d93fdd43-02cc-459d-fa06-1e103a90bc49"
       },
       "outputs": [
         {
@@ -138,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vN_tQO2ttZpr",
-        "outputId": "989acfe3-1541-45eb-b48d-b53858a4b70f"
+        "outputId": "37703354-3c22-4cfc-c0ec-dd0d01b580e9"
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -177,13 +177,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b933d65-af54-4dfb-9499-a1628d74189d"
+        "outputId": "aa2d139f-8e4a-4774-ecf0-50631633084f"
       },
       "outputs": [
         {
@@ -209,13 +209,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ddcf92cd-a83d-4965-b784-2591066731e7"
+        "outputId": "143ddc5f-5e8d-4ae0-d037-5e24e3074423"
       },
       "outputs": [
         {
@@ -246,13 +246,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5899cef8-4ce3-4f73-cbb0-619309fee6aa"
+        "outputId": "5cd9f3b4-0439-470d-890d-6093898da30b"
       },
       "outputs": [
         {
@@ -284,13 +284,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "cdde0eb9-20e6-40e1-e415-cd1e2a3bb3a7"
+        "outputId": "02aeed44-e9c2-4b28-b682-c3ed5d2e7612"
       },
       "outputs": [
         {
@@ -323,7 +323,7 @@
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.7097053527832031 seconds ---\n"
+            "--- 2.0172603130340576 seconds ---\n"
           ]
         }
       ],
@@ -347,13 +347,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c821ff12-e6f9-4b3e-b991-402091ad992e"
+        "outputId": "7c78b658-345a-4159-da82-d1a041435b65"
       },
       "outputs": [
         {
@@ -364,7 +364,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 10
         }
       ],
       "source": [
@@ -374,13 +374,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "622c4315-4afc-4b67-9a34-4f364fc75527"
+        "outputId": "2d373e64-e02e-4b0a-ba35-89ba43e20e3b"
       },
       "outputs": [
         {
@@ -391,7 +391,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 11
         }
       ],
       "source": [
@@ -401,13 +401,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "18d506b4-890f-4a57-ac49-1d7aa97b1f1b"
+        "outputId": "c2811797-92ca-40f9-f087-15e84298ef3a"
       },
       "outputs": [
         {
@@ -440,7 +440,7 @@
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.046703577041626 seconds ---\n"
+            "--- 0.8729546070098877 seconds ---\n"
           ]
         }
       ],
@@ -462,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 13,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 14,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 15,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -498,13 +498,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "7a14a0ab-a655-46dc-8d8c-2fa4975b31b4"
+        "outputId": "cfb527bb-6186-4e7e-efeb-c5f23ffa4f22"
       },
       "outputs": [
         {
@@ -537,7 +537,7 @@
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.9665319919586182 seconds ---\n"
+            "--- 1.3765289783477783 seconds ---\n"
           ]
         }
       ],
@@ -559,30 +559,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "hjjYzQGjtbq8"
+        "id": "hjjYzQGjtbq8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "99f9f09b-f3a6-4301-ea4b-e65fe5e6c081"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
-        "# 14. Uncache the home_sales temporary table.\n"
+        "# 14. Uncache the home_sales temporary table.\n",
+        "spark.sql(\"uncache table home_sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "Sy9NBvO7tlmm"
+        "id": "Sy9NBvO7tlmm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10fee74a-5a87-4dec-cc6f-5e6a029cfb34"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ],
       "source": [
         "# 15. Check if the home_sales is no longer cached\n",
-        "\n"
+        "spark.catalog.isCached(\"home_sales\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
