--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -45,10 +45,14 @@
    },
    "outputs": [],
    "source": [
-    "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "from pyspark import SparkFiles\n",
+    "\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "\n"
+    "spark.sparkContext.addFile(url)\n",
+    "df = spark.read.csv(SparkFiles.get(\"home_sales_revised.csv\"), sep=\",\", header=True)\n",
+    "\n",
+    "# Show the DataFrame\n",
+    "df.show()"
    ]
   },
   {
@@ -60,7 +64,7 @@
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "\n"
+    "df.createOrReplaceTempView('home_sales')\n"
    ]
   },
   {
@@ -76,6 +80,7 @@
    "outputs": [],
    "source": [
     "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
+    "spark.sql(\"\"\"SELECT YEAR(DATE) as Year_Sold_4B, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE BEDROOMS = 4 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n",
     "\n"
    ]
   },
@@ -93,6 +98,7 @@
    "source": [
     "# 4. What is the average price of a home for each year the home was built,\n",
     "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
+    "spark.sql(\"\"\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE bedrooms = 3 AND bathrooms = 3 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n",
     "\n"
    ]
   },
@@ -111,6 +117,7 @@
     "# 5. What is the average price of a home for each year the home was built,\n",
     "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
+    "spark.sql(\"\"\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2)AS Avg_Price FROM home_sales WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_lot >= 2000 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n",
     "\n"
    ]
   },
@@ -130,10 +137,16 @@
     "# having an average home price greater than or equal to $350,000? Order by descending view rating. \n",
     "# Although this is a small dataset, determine the run time for this query.\n",
     "\n",
+    "# Get the current time\n",
     "start_time = time.time()\n",
     "\n",
+    "# The code below displays the single digit 9 as part of the list\n",
+    "# spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
     "\n",
+    "# This line of code runs the query and sorts correctly by left-padding the values with '0' so that number 9 is considered 09, and be sorted correctly.\n",
+    "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
     "\n",
+    "# Print out the runtime\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
@@ -149,7 +162,8 @@
    },
    "outputs": [],
    "source": [
-    "# 7. Cache the the temporary table home_sales.\n"
+    "# 7. Cache the the temporary table home_sales.\n",
+    "spark.sql(\"cache table home_sales\")\n"
    ]
   },
   {
@@ -185,11 +199,14 @@
     "# having an average home price greater than or equal to $350,000. \n",
     "# Determine the runtime and compare it to the uncached runtime.\n",
     "\n",
+    "# Get the current time\n",
     "start_time = time.time()\n",
     "\n",
+    "# Repeating the same query as for the previous table\n",
+    "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
     "\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
+    "# Print out the runtime\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
@@ -200,7 +217,8 @@
    },
    "outputs": [],
    "source": [
-    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n"
+    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n",
+    "df.write.partitionBy(\"date_built\").mode(\"overwrite\").parquet(\"parket_delayed_partitioned\")"
    ]
   },
   {
@@ -211,7 +229,8 @@
    },
    "outputs": [],
    "source": [
-    "# 11. Read the formatted parquet data.\n"
+    "# 11. Read the formatted parquet data.\n",
+    "p_df=spark.read.parquet('parket_delayed_partitioned')"
    ]
   },
   {
@@ -222,7 +241,8 @@
    },
    "outputs": [],
    "source": [
-    "# 12. Create a temporary table for the parquet data.\n"
+    "# 12. Create a temporary table for the parquet data.\n",
+    "p_df.createOrReplaceTempView('p_delays_p')"
    ]
   },
   {
@@ -242,10 +262,13 @@
     "# having an average home price greater than or equal to $350,000. \n",
     "# Determine the runtime and compare it to the cached runtime.\n",
     "\n",
+    "# Get the current time\n",
     "start_time = time.time()\n",
     "\n",
+    "# Query that calculates the avg price of a home per view rating using the parquet DataFrame\n",
+    "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM p_delays_p WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
     "\n",
-    "\n",
+    "# Print out the runtime\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
@@ -261,7 +284,8 @@
    },
    "outputs": [],
    "source": [
-    "# 14. Uncache the home_sales temporary table.\n"
+    "# 14. Uncache the home_sales temporary table.\n",
+    "spark.sql(\"uncache table home_sales\")"
    ]
   },
   {
@@ -277,7 +301,7 @@
    "outputs": [],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "spark.catalog.isCached(\"home_sales\")\n"
    ]
   },
   {
@@ -285,7 +309,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write out a csv file from Spark\n",
+    "df.write.csv('out_home_sales_revised.csv', mode='overwrite')"
+   ]
   }
  ],
  "metadata": {
@@ -309,12 +336,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.8"
   },
   "nteract": {
    "version": "0.28.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
